--- a/alert.html
+++ b/alert.html
@@ -6,14 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href="alert.html">Alert</a>
-        <a href="dom.html">Dom</a>
-    </nav>
     <div>
-        <h1>Welcome to Javascript class</h1>
-
-        <p>This is my frist class</p>
+        <h2>Javascript Alert</h2>
+        <button onclick="showAlert()">Click Here</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
