--- a/dom.html
+++ b/dom.html
@@ -6,14 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <a href="alert.html">Alert</a>
-        <a href="dom.html">Dom</a>
-    </nav>
     <div>
-        <h1>Welcome to Javascript class</h1>
 
-        <p>This is my frist class</p>
+     <h2>Change text using Javascript</h2> 
+     <p id="text">Original Te
     </div>
 </body>
 </html>
